Bug 82524 - SIDEBAR: Incorrect selection of line width while "Line width" itself is correct (Draw and Impress)
Summary: SIDEBAR: Incorrect selection of line width while "Line width" itself is corre...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: Other All
: high normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:4.5.0 target:4.4.1 target:4.3.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties
  Show dependency treegraph
 
Reported: 2014-08-12 20:03 UTC by OfficeUser
Modified: 2016-10-24 15:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
issue.odg (66.85 KB, application/vnd.oasis.opendocument.graphics)
2014-08-12 20:04 UTC, OfficeUser
Details
Libo_4.3.2.2.png (41.04 KB, image/png)
2014-10-06 19:08 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2014-08-12 20:03:53 UTC
Please open the attached .odg file for a bug description.
Comment 1 OfficeUser 2014-08-12 20:04:34 UTC
Created attachment 104523 [details]
issue.odg
Comment 2 Owen Genat (retired) 2014-09-30 13:30:22 UTC
Tested under GNU/Linux using:

v4.2.6.3 Build ID: 3fd416d4c6db7d3204c17ce57a1d70f6e531ee21
v4.3.2.2 Build ID: edfb5295ba211bd31ad47d0bad0118690f76407d
v4.4.0.0.alpha0+ Build ID: df73f4115cfe4d07e4159adf087571687eb173ec TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-09-25_23:06:16

Issue is not reproducible under any of these versions. Correct line width (6.0 pt) is automatically selected. Please test again using one of the indicated versions. Thanks.
Comment 3 Owen Genat (retired) 2014-10-01 12:00:04 UTC
Status set to NEEDINFO. Please set back to UNCONFIRMED once the requested information in comment 2 is provided. Thanks.
Comment 4 OfficeUser 2014-10-06 19:07:44 UTC
Bug still present in
Version: 4.3.2.2
Build-ID: edfb5295ba211bd31ad47d0bad0118690f76407d

I have attached "Libo_4.3.2.2.png".

Please note that I mean the item of the drop down list (red arrow).
Comment 5 OfficeUser 2014-10-06 19:08:29 UTC
Created attachment 107441 [details]
Libo_4.3.2.2.png
Comment 6 ign_christian 2014-10-07 03:37:34 UTC
Reproduced with LO 4.3.2.2 portable - Win7 x86
Line width correctly shown as 6pt, but the selection is incorrect (0.5pt)

Not reproduced with LO 4.2.6.3 portable -> regression

Perhaps Windows only since Owen can't repro with linux.
Comment 7 ign_christian 2014-10-07 04:04:04 UTC
Got same results under Ubuntu 12.04 x86 :

Reproducible with LO 4.3.2.2, 4.3.0.0.beta1

No repro with LO 4.2.7.1

Reproducing from scratch: 
1. Create a line 
2. Change width to 6pt (choose from 'Width' dropdown box on sidebar)
3. Verify selection by hit again the 'Width' dropdown

Also reproduced by changing step 2 with any width
Comment 8 Owen Genat (retired) 2014-10-10 23:15:11 UTC
(In reply to OfficeUser from comment #4)
> Please note that I mean the item of the drop down list (red arrow).

Thanks for clarifying. I now see the problem under GNU/Linux using v4.3.2.2.
Comment 9 Owen Genat (retired) 2014-10-11 01:34:26 UTC
Bug 84887 raised in relation to the ODG attachment for this bug as it is causing v4.4.0.0 to crash.
Comment 10 Julien Nabet 2014-10-12 09:01:06 UTC
On pc Debian x86-64 with master sources updated yesterday + LO 4.3.2 Debian package, I could reproduce this on Draw.
Comment 11 Matthew Francis 2014-12-08 16:49:39 UTC
Bibisect results from 43all:

There are only 'skip'ped commits left to test.
The first bad commit could be any of: 67ae616bc846d2a4e05661a5980287cb38b8a455 bde12e7d6eef3d657ebdf62cb5442490fb90d899 7faf01595aded0c825d2d9e50c62c688e91c1496
We cannot bisect more!

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [752769ad0d2179e17ea0a08cc9004df7b890305b] source-hash-60c64b437c6678dd1d3fa3a6fc2b7da0480890d4
git bisect start 'latest' 'last42onmaster'
# bad: [4fcd68ce4979f85fda4568f4b419a4b41d07345f] source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
git bisect bad 4fcd68ce4979f85fda4568f4b419a4b41d07345f
# bad: [0d4c20a601a3cfff27d6685d0e81463086bd9d74] source-hash-f1b1e73227471192682d303a58618ca8bd65a74d
git bisect bad 0d4c20a601a3cfff27d6685d0e81463086bd9d74
# skip: [18ee045c7e35e5ae98cffaafd56fb6fb37d7afcf] source-hash-fe506f34f2dccb6562935fe4dfbc1fe6d609dec8
git bisect skip 18ee045c7e35e5ae98cffaafd56fb6fb37d7afcf
# good: [9fe7b44f1975d64e3009c31341187c53c8e3a2b8] source-hash-7f5494f3c4bf14209a119c6b21c02e10075503ae
git bisect good 9fe7b44f1975d64e3009c31341187c53c8e3a2b8
# good: [f1e56b0f09e0a75b8970a8b9892298f0ca210200] source-hash-eeeefd6fd87b3cff18ba9078869bdfcd0e351d6f
git bisect good f1e56b0f09e0a75b8970a8b9892298f0ca210200
# bad: [d8a9d450e6e5221de4d4659bac6e315d73388d3b] source-hash-3034b144d0062e9c4394b901aded43fec117ed11
git bisect bad d8a9d450e6e5221de4d4659bac6e315d73388d3b
# skip: [bde12e7d6eef3d657ebdf62cb5442490fb90d899] source-hash-03725013b64e74473e1a9e925b24927e7e61d412
git bisect skip bde12e7d6eef3d657ebdf62cb5442490fb90d899
# good: [92ca7e7dd4470107453ce3e99f3675387f91bf24] source-hash-ed5065d8b080bfaf51ea1232cebf3ff72af1e640
git bisect good 92ca7e7dd4470107453ce3e99f3675387f91bf24
# skip: [67ae616bc846d2a4e05661a5980287cb38b8a455] source-hash-6069b5162281ccc88eb242991a115197d0893fb4
git bisect skip 67ae616bc846d2a4e05661a5980287cb38b8a455
# bad: [7faf01595aded0c825d2d9e50c62c688e91c1496] source-hash-78a61583c266a1fd222cd78c912e35e93f7010d3
git bisect bad 7faf01595aded0c825d2d9e50c62c688e91c1496
# only skipped commits left to test
# possible first bad commit: [7faf01595aded0c825d2d9e50c62c688e91c1496] source-hash-78a61583c266a1fd222cd78c912e35e93f7010d3
# possible first bad commit: [67ae616bc846d2a4e05661a5980287cb38b8a455] source-hash-6069b5162281ccc88eb242991a115197d0893fb4
# possible first bad commit: [bde12e7d6eef3d657ebdf62cb5442490fb90d899] source-hash-03725013b64e74473e1a9e925b24927e7e61d412
Comment 12 Matthew Francis 2014-12-08 16:53:34 UTC
Follow-up bisect over the bibisect range points to this commit:

commit ab50bc9d4a72193c1fefcbf0652938995094bc41
Author: Tsutomu Uchino <hanya@apache.org>
Date:   Sat Jan 18 08:14:47 2014 +0000

    Resolves: #i56998# add a space separater between value and unit...
    
    and remove separator between value and percent to match with ISO 31-0
    
    (cherry picked from commit 0cea884e3f417e4b58d2fdcfc7b0111f3bfc6f30)
    
    Conflicts:
        chart2/source/controller/dialogs/tp_SeriesToAxis.src
        cui/source/dialogs/colorpicker.cxx
        cui/source/dialogs/colorpicker.src
        cui/source/dialogs/grfflt.src
        cui/source/dialogs/zoom.src
        cui/source/tabpages/tabline.src
        editeng/source/items/frmitems.cxx
        editeng/source/items/textitem.cxx
        sd/source/ui/animations/CustomAnimationDialog.src
        sd/source/ui/animations/SlideTransitionPane.src
        svx/source/dialog/bmpmask.src
        svx/source/engine3d/float3d.src
        svx/source/items/algitem.cxx
        svx/source/sidebar/text/TextCharacterSpacingControl.cxx
        svx/source/xoutdev/xattr.cxx
        sw/source/ui/utlui/attrdesc.cxx
        sw/source/ui/utlui/uiitems.cxx
    
    Change-Id: I554309cb72dd8956077c5ca6866a982cdd6529aa
Comment 13 Commit Notification 2015-01-27 21:51:16 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8fd9c25ac66dd238d4c68be3974241a18cb21705

tdf#82524: Mismatch of ValueSet and metric field values

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Katarina Behrens 2015-01-27 21:57:30 UTC
I'm a lazy bum and I normally don't backport my stuff, but I see this bug has high importance (I wouldn't certainly classify it as such, to me it's just a cosmetic issue ... but I've already learned not to make judgements here :))

Given that (+ regression status), anyone wants me to backport to 4.4?
Comment 15 Julien Nabet 2015-01-27 22:06:28 UTC
If it can help, I could cherry-pick your patch and submit it for gerrit review in 4.4 and 4.3 branches.

BTW, I wonder if fdo#88740 (put in See also) could have a similar root cause of this one.
Comment 16 Commit Notification 2015-01-28 07:36:20 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dc636d7265fc7591cdc6dbd0ff402fa80106a6f7&h=libreoffice-4-4

tdf#82524: Mismatch of ValueSet and metric field values

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2015-01-28 07:37:55 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27fdd2c3e9b530a7194bdfd986dbaea14e5c2145&h=libreoffice-4-3

tdf#82524: Mismatch of ValueSet and metric field values

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Andras Timar 2015-01-28 07:49:27 UTC
Thanks for the fix, Bubli!
Comment 19 Robinson Tryon (qubit) 2015-12-17 08:29:55 UTC Comment hidden (obsolete)