tdf#82524: Mismatch of ValueSet and metric field values

Regression from commit ab50bc9d4a72193c1fefcbf0652938995094bc41
which adds space separator between value and unit.

As metric fields now output values with separator, LineWidthValueSet
items must be adjusted accordingly, otherwise they'll never match

Change-Id: I55778c9c0cc36d968a061e5e35b6db3f2a159977